# flask-gae-static

./: .gitignore  README.md  flask_gae_static.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: unit-tests.yml
tests/: app.yaml  test_flask_gae_static.py
